# BigBox

./: .gitignore  Cargo.toml  PKGBUILD  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: arch-guard.yml  flathub-update.yml  release.yml
crates/bigbox-cloud/: Cargo.toml
crates/bigbox-cloud/src/: lib.rs
crates/bigbox-config/: Cargo.toml
crates/bigbox-config/data/: services.json
crates/bigbox-config/src/: config.rs  lib.rs  services.rs  store.rs
crates/bigbox-contract/: Cargo.toml
crates/bigbox-contract/src/: lib.rs
crates/bigbox-core/: Cargo.toml
crates/bigbox-core/src/: config.rs  layout.rs  lib.rs  services.rs  sms.rs  vorcaro.rs
crates/bigbox-driver-assets/: Cargo.toml
crates/bigbox-driver-assets/assets/: telegram.js  whatsapp.js
crates/bigbox-driver-assets/src/: lib.rs
crates/bigbox-kdeconnect/: Cargo.toml
crates/bigbox-kdeconnect/examples/: probe.rs
crates/bigbox-kdeconnect/src/: cert.rs  connection.rs  contacts.rs  dbus.rs  discovery.rs  identity.rs  lib.rs  packet.rs  sms.rs  store.rs  tls.rs
crates/bigbox-orchestrator/: Cargo.toml
crates/bigbox-orchestrator/src/: attachments.rs  csv_io.rs  engine.rs  lib.rs
crates/bigbox-shell/: Cargo.toml
crates/bigbox-shell/src/: commands.rs  lib.rs
crates/bigbox-vorcaro/: Cargo.toml
crates/bigbox-vorcaro/src/: attachments.rs  cloud_api.rs  csv_io.rs  drivers.rs  ipc.rs  lib.rs  model.rs  orchestrator.rs  store.rs
data/: services.json
docs/: VORCARO-STUDIO-PLAN.md  WEBKIT-BUG-REPORT.md  WORKSPACE-REFACTOR-PLAN.md  webkit-mse-chunked-append-repro.html
flatpak/: FLATHUB_PR_BODY.md  SUBMISSION.md  io.github.podheitor.bigbox.desktop  io.github.podheitor.bigbox.metainfo.xml  io.github.podheitor.bigbox.yaml
frontend/: about.html  app.js  index.html  style.css
frontend/sms/: index.html  sms.css  sms.js
frontend/vorcaro/: i18n.js  index.html  studio.css  studio.js
scripts/: check-no-tauri.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  services.rs
src-tauri/src/vorcaro/: cloud_api.rs  csv_io.rs  drivers.rs  mod.rs  model.rs  orchestrator.rs  store.rs
