[package]
name = "bigbox"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Heitor Faria"]
description = "All your messaging apps in one window — cross-platform"

[lib]
name = "bigbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
lto        = true
codegen-units = 1
strip      = true
panic      = "abort"

# Patched wry: forces a WebView2 repaint on WM_SHOWWINDOW so a hidden->shown
# service webview paints (Windows multiwebview). wry 0.54.4 + one-arm patch;
# see github.com/podheitor/wry@bigbox-0.54.4.
[patch.crates-io]
wry = { git = "https://github.com/podheitor/wry", branch = "bigbox-0.54.4" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk   = { version = "0.18", features = ["v3_24"] }
cairo = { version = "0.18", package = "cairo-rs" }
webkit2gtk = "2.0"

# ICoreWebView2Controller.NotifyParentWindowPositionChanged() — force a repaint
# after show() (WebView2 doesn't repaint on hidden->visible; known bug). Version
# matches what wry/tauri resolve.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
