[package]
name = "bigbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "All your messaging apps in one window — cross-platform"

[lib]
name = "bigbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

# The binary / app-composition crate. The ONLY place that knows every layer:
# Builder wiring, window/GTK setup, IPC handler registration. Joins the two
# Tauri-edge sibling crates (shell + vorcaro).
[dependencies]
tauri.workspace = true
serde_json.workspace = true
bigbox-shell.workspace = true
bigbox-vorcaro.workspace = true

# NOTE: [patch.crates-io] (wry fork) and [profile.release] live in the workspace
# root Cargo.toml — they are workspace-global and cannot live in a member.
# Platform deps (gtk/webkit2gtk/zbus) moved to bigbox-shell, which owns the GTK
# overlay layout and webview host. cairo was unused and has been dropped.
