[package]
name = "bigbox-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# WhatsApp Cloud API (Meta Graph) HTTP client + its secrets persistence.
# NO tauri.
[dependencies]
bigbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs.workspace = true
